# 3ds_intern

./: .gitignore  README.md
compute_pi/compute_pi/: compute_pi.sln
compute_pi/compute_pi/Debug/: compute_pi.ilk
compute_pi/compute_pi/compute_pi/: compute_pi.cpp  compute_pi.vcxproj  compute_pi.vcxproj.filters  computor.h  (+2 more)
meshcnn/: README.md  test.py  train.py
meshcnn/data/: segmentation_data.py
meshcnn/options/: test_options.py  train_options.py
projet/mesh_generator/: CMakeLists.txt  Mesh.cpp  MeshLoader.cpp  Plan.cpp  Point3D.cpp  Triangle.cpp  catch.h  main.cpp  mesh_generator.sln  test_Mesh.h  test_MeshUtils.cpp  test_MeshUtils.h  test_Plan_is_in_plan.h  test_Point3D_distancewith.h  test_Polygon_area.h  test_meshloader.h  test_simplegenerator.h  test_triangle_plan_support.h
projet/mesh_generator/Debug/: mesh_generator.ilk
projet/mesh_generator/Interfaces/: Mesh.h  MeshLoader.h  Plan.h  Point3D.h  Triangle.h  Vector.h  constant.h
projet/mesh_generator/UnitTest1/: UnitTest1.vcxproj  UnitTest1.vcxproj.filters  test_Mesh.cpp  test_Plan_is_in_plan.cpp
projet/mesh_generator/UnitTest1/x64/Debug/: vc141.idb
projet/mesh_generator/UnitTest1/x64/Debug/UnitTest1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnitTest1.lastbuildstate  link.delete.1.tlog
projet/mesh_generator/mesh_generator/: Mesh.cpp  Mesh.h  Plan.cpp  Plan.h  Point3D.cpp  Point3D.h  Polygon.cpp  Polygon.h  SimpleShapeGenerator.cpp  SimpleShapeGenerator.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  constant.h  main.cpp  mesh_generator.vcxproj  mesh_generator.vcxproj.filters  test.cpp
projet/mesh_generator/mesh_generator/Debug/: main.obj.enc  polygon.obj.enc  vc141.idb
projet/mesh_generator/mesh_generator/Debug/mesh_generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mesh_generator.lastbuildstate
trianglecnn/: off_to_obj.py  train.py
trianglecnn/data/: __init__.py  base_dataset.py  classification_data.py  generation_data.py  segmentation_data.py
trianglecnn/models/: mesh_classifier.py  networks.py
trianglecnn/options/: base_options.py  train_options.py
trianglecnn/util/: Chamfer_Loss.py  sampling.py  util.py
(+50 files in other folders)
